# time-monitor

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
docs/: api.md  development.md  examples.md  getting-started.md  index.md
src/time_monitor/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_pytest.py
